--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation "com.google.android.material:material:${designSupportVersion}"
     implementation "com.github.bumptech.glide:glide:4.8.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
